--- a/1.html
+++ b/1.html
@@ -285,7 +285,7 @@ $(document).ready(function () {
 </li>
 <li class="dropdown">
   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
-    Statistics
+    Projects
      
     <span class="caret"></span>
   </a>
